Bug 210602 - KNode/Windows doesn't show message-bodies
Summary: KNode/Windows doesn't show message-bodies
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-14 22:52 UTC by Uwe Premer
Modified: 2009-12-22 22:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot KNode 4.3.4 with the error message (14.69 KB, image/jpeg)
2009-12-14 01:03 UTC, Uwe Premer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Uwe Premer 2009-10-14 22:52:16 UTC
Version:           4.3.2 (using 4.3.2 (KDE 4.3.2), compiled sources)
Compiler:          gcc.exe
OS:                Microsoft Windows (i686) release 5.1 (XP Professional)

KNode (Windows-version) doesn't show the message-bodies. When clicking on a message, the message-text (body) doesn't appear, but there comes the following Error message: "Es ist ein Fehler aufgetreten. Der von ihnen angeforderte Artikel ist auf dem News-Server  nicht verfügbar. Sie können versuchen, ihn von groups.google.com herunterzuladen." The internet connection is OK and all the other windows newsreader are just showing the artikel texts. As a first measurement a have deleted all KDE files, because I thaught there are old dlls and then I installed the whole KDE desktop on Windows new, but it doesn't solve the problem, which exist since earlier versions of KDE.
Comment 1 Uwe Premer 2009-12-14 01:03:52 UTC
Created attachment 39036 [details]
Screenshot KNode 4.3.4 with the error message

KNode shows this error message at every posting in the list. I had actualized the message list before trying to read the last message. And this last message I have posted myself with this KNode. It is not cancelled! So, KNode should show the message body, but don't do this.
Comment 2 Olivier Trichet 2009-12-22 22:16:07 UTC
SVN commit 1065263 by otrichet:

Don't use QDir::separator() when we meant '/'. This does not work on Windows...

This does not introduce any regression on unix-like platform and should help fixing bug #210602 "KNode/Windows doesn't show message-bodies"

CCBUG: 210602

 M  +2 -2      nntp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065263
Comment 3 Olivier Trichet 2009-12-22 22:16:27 UTC
SVN commit 1065265 by otrichet:

Correctly set the path of the url of ArticleFetchJob

Especially don't use QDir::separator() which is '\' on Windows.
This does not introduce any regression on unix-like platform and should help fixing bug #210602 "KNode/Windows doesn't show message-bodies"

BUG: 210602

 M  +4 -5      nntpjobs.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065265