Correctly set the path of the url of ArticleFetchJob

Especially don't use QDir::separator() which is '\' on Windows.
This does not introduce any regression on unix-like platform and should help fixing bug #210602 "KNode/Windows doesn't show message-bodies"

BUG: 210602

svn path=/trunk/KDE/kdepim/knode/; revision=1065265